--- a/HTML-Structure/instagram/style.css
+++ b/HTML-Structure/instagram/style.css
@@ -27,7 +27,7 @@ body {
 }
 
 .tittle {
-    padding: 50px;
+    padding: 57px;
     text-transform: capitalize;
     font-size: 40px;
     font-family: 'Pacifico', cursive;
@@ -49,12 +49,12 @@ form input {
     border-radius: 0px;
     outline:rgba(0, 0, 0,0.4);
     
-    outline: saddlebrown;
+    outline: rgb(0, 0, 0);
 }
 
 form input:focus {
     border: 1px solid rgba(0, 0, 0,0.4);
-    background: #efeefe;
+    background: #ffffff;
     height: 35px;
     font-size: 30px;
 }
@@ -74,7 +74,7 @@ form button {
     background: #5c72bd;
     padding: 5px 0;
     margin-top: 5px;
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     border-radius: 3px;
     font-weight: bold;
     text-transform: capitalize;
@@ -82,11 +82,11 @@ form button {
 
 }
 form button:active {
-    background: #000000;
+    background: #ffffff;
     transform: scale(0.995);
 }
 form .option {
-    color: #1d0101;
+    color: #000000;
     margin: 10px 0;
     font-weight: bold;
     position: relative;
@@ -97,7 +97,7 @@ form .option::before {
     content: ' ';
     width: 37%;
     height: 2px;
-    background-color: #0840f5;
+    background-color: #8400ff;
     left: 0;
     top: 50%;
     transform: translateY(-50%);
@@ -109,7 +109,7 @@ form .option::after {
     content: ' ';
     width: 37%;
     height: 2px;
-    background-color: #6ff006;
+    background-color: #8400ff;
     right: 0;
     top: 50%;
     transform: translateY(-50%);
@@ -122,13 +122,13 @@ form .option::after {
 }
 .fblink span {
     font-size: 18px;
-    color: #021897;
+    color: #092bee;
     margin-right: 5px;
 }
 .fblink a {
     text-decoration: none;
     font-weight: bold;
-    color: #021187;
+    color: #0e27e6;
 }
 .forget-id {
     margin: 15px;
@@ -152,7 +152,7 @@ form .option::after {
 .signup a {
     text-decoration: none;
     margin-left: 5px;
-    color: #008aff;
+    color: #8800f7;
 }
 
 .footer {
