--- a/Flex/website-design/styles/main.css
+++ b/Flex/website-design/styles/main.css
@@ -4,7 +4,7 @@ html {
 
 body {
   font-family: Arial, Helvetica, sans-serif;
-  background-color: #10d1b1;
+  background-color: #162044;
   color: #fff;
 }
 
@@ -17,7 +17,7 @@ p {
   display: flex;
   align-items: center;
   gap: 12px;
-  border-bottom: 1px solid #50cc16;
+  border-bottom: 1px solid #fff;
   position: sticky;
   top: 0px;
   background-color: #070e27;
@@ -42,19 +42,21 @@ p {
   color: #fff;
   text-transform: uppercase;
   letter-spacing: 1px;
+  
 }
 
 .btn {
   border: none;
-  border-radius: 4px;
+  border-radius: 40px;
   background-color: #162044;
   color: #fff;
   padding: 8px 20px;
   cursor: pointer;
+
 }
 
 .btn.btn-primary {
-  background-color: #0059f7;
+  background-color: #fc8600;
 }
 
 /* Hero */
@@ -95,7 +97,7 @@ p {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 8px;
+  gap: 10px;
   
 }
 
@@ -107,7 +109,7 @@ p {
 }
 
 #how:hover {
-  background-color: #10d1b1;
+  background-color: #162044;
   transform: scale(1.1) perspective(1px)
 }
 
